<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">
    <LinearLayout style="@style/new_alarm_clcok_item_llyt">
        <LinearLayout style="@style/new_alarm_clcok_item">
            <TextView
                style="@style/new_alarm_clcok_item_type"
                android:text="@string/text_format_24"
                android:textAllCaps="false"/>
            <ToggleButton
                android:id="@+id/tb_format_24"
                style="@style/new_alarm_clcok_item_toggle_btn">
            </ToggleButton>
        </LinearLayout>
        <View style="@style/divider_line"
            android:background="#d6dbde"/>

        <LinearLayout style="@style/new_alarm_clcok_item">

            <TextView
                android:textAllCaps="false"
                style="@style/new_alarm_clcok_item_type"
                android:text="@string/vibrate"/>

            <ToggleButton
                android:id="@+id/vibrate_btn"
                style="@style/new_alarm_clcok_item_toggle_btn">
            </ToggleButton>
        </LinearLayout>
        <View style="@style/divider_line"
            android:background="#d6dbde"/>

        <LinearLayout
            android:id="@+id/ring_llyt"
            style="@style/new_alarm_clcok_item"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:background="@drawable/bg_record_operate_item">

            <TextView
                style="@style/new_alarm_clcok_item_type"
                android:layout_marginLeft="6dp"
                android:textAllCaps="false"
                android:text="@string/text_default_song"/>

            <TextView
                android:id="@+id/ring_describe"
                style="@style/new_alarm_clcok_item_describe"
                android:layout_marginRight="6dp"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_more_arrow_light"
                android:ellipsize="end"
                android:maxWidth="230dp"
                android:singleLine="true"
                android:textColor="#0179ff"
                android:text="@string/default_ring"/>
        </LinearLayout>
        <View style="@style/divider_line"
            android:background="#d6dbde"/>

        <LinearLayout
            android:id="@+id/nap_llyt"
            style="@style/new_alarm_clcok_item"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:textAllCaps="false"
            android:background="@drawable/bg_record_operate_item">

            <TextView
                style="@style/new_alarm_clcok_item_type"
                android:layout_marginLeft="6dp"
                android:textAllCaps="false"
                android:text="@string/text_default_time_snooze"/>

            <TextView
                android:id="@+id/txt_snooze_time"
                style="@style/new_alarm_clcok_item_describe"
                android:layout_marginRight="6dp"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_more_arrow_light"
                android:ellipsize="end"
                android:maxWidth="230dp"
                android:textColor="#0179ff"
                android:singleLine="true"
                android:text="@string/default_snooze_time"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>